Fix filename wrap

--- a/src/main/webapp/jquery.savapage.css
+++ b/src/main/webapp/jquery.savapage.css
@@ -86,7 +86,7 @@
 	color: red;
 }
 
-.sp-url-wrap {
+.sp-url-wrap , .sp-filename-wrap {
 	/* These are technically the same, but use both */
 	overflow-wrap: break-word;
 	word-wrap: break-word;
